containers/citizen-registry/k8s/staging/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: gaiaid-registry
   namespace: demos-staging
   labels:
      app: nginx
spec:
   serviceName: "gaiaid-registry"
   replicas: 1
   selector:
      matchLabels:
         app: gaiaid-registry
   template:
      metadata:
         labels:
            app: gaiaid-registry
      spec:
         containers:
         -  name: gaiaid-registry-artemis
            image: apache/activemq-artemis
            imagePullPolicy: Always
            volumeMounts:
            - name: gaiaid-registry-artemis-pv-staging
              mountPath: /var/lib/artemis-instance
            ports:
            -  containerPort: 8161
            -  containerPort: 61616
            -  containerPort: 5672
         -  name: gaiaid-registry-sa-container
            image: gitlab.mobiera.com:4567/2060/2060-service-agent:staging
            imagePullPolicy: Always
            volumeMounts:
            - name: gaiaid-registry-sa-pv-staging
              mountPath: /root/.afj
              
            ports:
            -  containerPort: 3000
            -  containerPort: 3001
         -  name: gaiaid-registry-backend-container
            image: gitlab.mobiera.com:4567/2060-demos/registry:staging
            imagePullPolicy: Always
            ports:
            -  containerPort: 2903
         -  name: gaiaid-registry-data-store-container
            image: gitlab.mobiera.com:4567/2060/2060-data-store:staging
            imagePullPolicy: Always
            ports:
            -  containerPort: 2904
            volumeMounts:
            - name: gaiaid-registry-data-store-staging
              mountPath: /home/data
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: gaiaid-registry-pg-pv-staging
              mountPath: /var/lib/postgresql/data
         imagePullSecrets:
         -  name: registry-credentials
         -  name: 2060-registry-credentials

   volumeClaimTemplates: 
   - metadata:
       name: gaiaid-registry-artemis-pv-staging
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: gaiaid-registry-sa-pv-staging
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: gaiaid-registry-pg-pv-staging
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: gaiaid-registry-data-store-staging
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
